--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "5.3.3"
   },
   "devDependencies": {
+    "@types/node": "^12.20.55",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
     "concurrently": "6.3.0",
+    "eslint-config-htmlacademy": "^6.0.0",
     "joi": "17.4.2",
     "json-server": "0.17.0",
-    "sass": "1.43.4"
+    "sass": "1.43.4",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start:client": "react-scripts start",
